--- a/ParkingLot/src/main/java/main/gameScene.fxml
+++ b/ParkingLot/src/main/java/main/gameScene.fxml
@@ -11,9 +11,13 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
 <TabPane fx:id="tabPane" maxHeight="720.0" maxWidth="1080.0" minHeight="720.0" minWidth="1080.0" prefHeight="720.0" prefWidth="1080.0" snapToPixel="false" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.MainController">
-  <tabs>
-    <Tab fx:id="carSystem" text="Car System Simulator">
+   <tabs>
+      <Tab fx:id="carSystem" text="Car System Simulator">
          <content>
             <SplitPane fx:id="carSystemSP" dividerPositions="1.0" prefHeight="200.0" prefWidth="200.0">
                <items>
@@ -268,5 +272,60 @@
             </SplitPane>
          </content>
       </Tab>
-  </tabs>
+
+      <Tab fx:id="systemStatus" text="System Status">
+         <content>
+            <SplitPane dividerPositions="0.21348314606741572" layoutX="4.0" layoutY="28.0" orientation="VERTICAL" prefHeight="358.0" prefWidth="588.0">
+               <items>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" SplitPane.resizableWithParent="false">
+                     <children>
+                        <Label id="statusTimeLabel" style="-fx-background-color: grey;" alignment="CENTER" contentDisplay="CENTER" layoutX="209.0" layoutY="12.0" prefHeight="59.0" prefWidth="208.0" text="statusTime" textAlignment="CENTER" textFill="#0ab4e8" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="209.0" AnchorPane.rightAnchor="169.0" AnchorPane.topAnchor="12.0">
+                           <font>
+                              <Font size="29.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </AnchorPane>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="166.0" prefWidth="423.0">
+                     <children>
+                        <GridPane layoutX="15.0" layoutY="19.0" prefHeight="242.0" prefWidth="557.0">
+                           <columnConstraints>
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                           </columnConstraints>
+                           <rowConstraints>
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                           </rowConstraints>
+                           <children>
+                              <Label id="statusCarIn" alignment="CENTER" contentDisplay="CENTER" prefHeight="38.0" prefWidth="300.0"  textAlignment="CENTER">
+                                 <font>
+                                    <Font size="26.0" />
+                                 </font>
+                              </Label>
+                              <Label id="statusCarOut" alignment="CENTER" contentDisplay="CENTER" prefHeight="38.0" prefWidth="300.0" text="carOut" textAlignment="CENTER" GridPane.columnIndex="1">
+                                 <font>
+                                    <Font size="26.0" />
+                                 </font>
+                              </Label>
+                              <Label id="statusPersonIn" alignment="CENTER" contentDisplay="CENTER" prefHeight="38.0" prefWidth="300.0" text="personIn" textAlignment="CENTER" GridPane.rowIndex="1">
+                                 <font>
+                                    <Font size="26.0" />
+                                 </font>
+                              </Label>
+                              <Label id="statusPersonOut" alignment="CENTER" contentDisplay="CENTER" prefHeight="38.0" prefWidth="300.0" text="personOout" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                 <font>
+                                    <Font size="26.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </GridPane>
+                     </children>
+                  </AnchorPane>
+               </items>
+            </SplitPane>
+         </content>
+      </Tab>
+   </tabs>
 </TabPane>
