--- a/ParkingLot/src/main/java/main/gameScene.fxml
+++ b/ParkingLot/src/main/java/main/gameScene.fxml
@@ -179,7 +179,7 @@
                   <Pane fx:id="gamePane1" prefHeight="200.0" prefWidth="200.0" />
                   <VBox maxWidth="200.0" minWidth="250.0" prefHeight="200.0" prefWidth="100.0" SplitPane.resizableWithParent="false">
                      <children>
-                        <Label fx:id="workTimeLabel" alignment="CENTER" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" prefHeight="50.0" style="-fx-background-color: white;" text="0000-00-00 00:00:00" textFill="RED">
+                        <Label fx:id="workTimeLabel" alignment="CENTER" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" prefHeight="50.0" style="-fx-background-color: gray;" text="0000-00-00 00:00:00" textFill="WHITE">
                            <padding>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </padding>
@@ -229,7 +229,7 @@
                               </HBox>
                               <HBox prefHeight="100.0" prefWidth="200.0">
                                  <children>
-                                    <Label maxWidth="1.7976931348623157E308" minWidth="125.0" text="Check IN: ">
+                                    <Label maxWidth="1.7976931348623157E308" minWidth="125.0" text="IN: ">
                                        <font>
                                           <Font name="System Bold" size="25.0" />
                                        </font>
@@ -243,7 +243,7 @@
                               </HBox>
                               <HBox layoutX="15.0" layoutY="85.0" prefHeight="100.0" prefWidth="200.0">
                                  <children>
-                                    <Label maxWidth="1.7976931348623157E308" minWidth="125.0" text="Check OUT: ">
+                                    <Label maxWidth="1.7976931348623157E308" minWidth="125.0" text="OUT: ">
                                        <font>
                                           <Font name="System Bold" size="25.0" />
                                        </font>
